@@ -1,3 +1,7 @@
+2010-06-15  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #14737: htmlArea RTE: Missing labels for SelectFont extension
+
 2010-06-14  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #14723: htmlArea RTE: JS errors block RTE usage in IE6 and IE7 (Thanks to Jo Hasenau)
